--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#68bab7" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -13,7 +13,7 @@
         content="#68bab7" 
         media="(prefers-color-scheme: light)">
   <meta name="theme-color" 
-      content="68bab7" 
+      content="#68bab7" 
       media="(prefers-color-scheme: dark)">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
