--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-  <meta name="theme-color" 
-        content="#68bab7" 
-        media="(prefers-color-scheme: light)">
-  <meta name="theme-color" 
-      content="#68bab7" 
-      media="(prefers-color-scheme: dark)">
+    <meta
+      name="theme-color"
+      content="#68bab7"
+      media="(prefers-color-scheme: light)"
+    />
+    <meta
+      name="theme-color"
+      content="#68bab7"
+      media="(prefers-color-scheme: dark)"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +35,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Hey, I'm Eric</title>
-<script src="https://kit.fontawesome.com/5ee03fc372.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5ee03fc372.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
